@@ -71,7 +71,7 @@ public class ItemRepository {
         }
 
         List<String> info = item.getInfo();
-        String wikiLink0 = info.get(0);
+        String wikiLink0 = info.getFirst();
         String wikiLink1 = info.size() > 1 ? info.get(1) : "";
         String wikiDomain = SkyblockerConfigManager.get().general.wikiLookup.officialWiki ? "https://wiki.hypixel.net" : "https://hypixel-skyblock.fandom.com";
         if (wikiLink0.startsWith(wikiDomain)) {
