@@ -28,7 +28,7 @@ public class EffigyWaypoints {
     private static final List<BlockPos> UNBROKEN_EFFIGIES = new ArrayList<>();
 
     protected static void updateEffigies() {
-        if (!SkyblockerConfigManager.get().slayer.vampireSlayer.enableEffigyWaypoints || !Utils.isOnSkyblock() || !Utils.isInTheRift() || !Utils.getIslandArea().contains("Stillgore Château")) return;
+        if (!SkyblockerConfigManager.get().slayers.vampireSlayer.enableEffigyWaypoints || !Utils.isOnSkyblock() || !Utils.isInTheRift() || !Utils.getIslandArea().contains("Stillgore Château")) return;
 
         UNBROKEN_EFFIGIES.clear();
 
@@ -41,7 +41,7 @@ public class EffigyWaypoints {
                     List<Text> prefixAndSuffix = Utils.TEXT_SCOREBOARD.get(i).getSiblings();
 
                     //Add contents of prefix and suffix to list
-                    effigiesText.addAll(prefixAndSuffix.get(0).getSiblings());
+                    effigiesText.addAll(prefixAndSuffix.getFirst().getSiblings());
                     effigiesText.addAll(prefixAndSuffix.get(1).getSiblings());
 
                     for (int i2 = 1; i2 < effigiesText.size(); i2++) {
@@ -55,10 +55,10 @@ public class EffigyWaypoints {
     }
 
     protected static void render(WorldRenderContext context) {
-        if (SkyblockerConfigManager.get().slayer.vampireSlayer.enableEffigyWaypoints && Utils.getIslandArea().contains("Stillgore Château")) {
+        if (SkyblockerConfigManager.get().slayers.vampireSlayer.enableEffigyWaypoints && Utils.getIslandArea().contains("Stillgore Château")) {
             for (BlockPos effigy : UNBROKEN_EFFIGIES) {
                 float[] colorComponents = DyeColor.RED.getColorComponents();
-                if (SkyblockerConfigManager.get().slayer.vampireSlayer.compactEffigyWaypoints) {
+                if (SkyblockerConfigManager.get().slayers.vampireSlayer.compactEffigyWaypoints) {
                     RenderHelper.renderFilledWithBeaconBeam(context, effigy.down(6), colorComponents, 0.5F, true);
                 } else {
                     RenderHelper.renderFilledWithBeaconBeam(context, effigy, colorComponents, 0.5F, true);
